Programada ODF pelo método de diferença espectral. Separação de métodos de ODF em blocos.

--- a/AC02_Andre_Paiva.ipynb
+++ b/AC02_Andre_Paiva.ipynb
@@ -72,7 +72,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def spectroPlot(audioArray, rate, windowSize, vmin, vmax, title):\n",
@@ -111,7 +115,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "file = 'guitar.wav'\n",
@@ -128,7 +136,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "file = 'cover_altj_intro.wav'\n",
@@ -139,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Função de detecção de On-sets - método do conteúdo de alta frequência (HFC)"
+    "### Função de detecção de On-sets (ODF)"
    ]
   },
   {
@@ -148,34 +160,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ODF_HFC_PLOT(x_axis, y_axis, canal=\"MONO\"):\n",
-    "    plt.figure(figsize=(15,5))\n",
-    "    plt.margins(0, 0)\n",
-    "    title = \"ODF - Método do conteúdo de alta frequência\"\n",
-    "    if canal == \"L\":\n",
-    "        title = title + \" - Canal Esquerdo\"\n",
-    "    elif canal == \"R\":\n",
-    "        title = title + \" - Canal Direito\"\n",
-    "    plt.title(title)\n",
-    "    plt.ylabel('Diferença energética')\n",
-    "    plt.xlabel('Tempo [s]')\n",
-    "    plt.plot(y_axis, x_axis, 'g')\n",
-    "    plt.show()\n",
-    "    \n",
     "def ODF_HFC_CALC(data_np_array, windowSize, overlap):\n",
     "    sizerange = np.arange(1, windowSize+1)\n",
     "    hfc_calc = []\n",
     "    i = 0\n",
     "    while i < data_np_array.shape[0]:\n",
-    "        datatmp = data_np_array[i:i + windowSize]\n",
+    "        datatmp = data_np_array[i : i + windowSize]\n",
     "        ffttmp = fft.fft(datatmp, n=windowSize)\n",
     "        ffttmp = abs(sizerange)*(abs(ffttmp)**2)\n",
     "        hfc_calc.append(np.sum(abs(ffttmp[0:int(windowSize/2)]))*(2/windowSize))\n",
     "        i = i + int(windowSize*(1-overlap))\n",
-    "    return hfc_calc\n",
-    "    \n",
-    "\n",
-    "def ODF_HFC(filename, windowSize, overlap):\n",
+    "    return hfc_calc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ODF_SD_CALC(data_np_array, windowSize, overlap):\n",
+    "    sizerange = np.arange(1, windowSize+1)\n",
+    "    sd_calc = []\n",
+    "    i = 0\n",
+    "    while i < data_np_array.shape[0]:\n",
+    "        indexOverlapStart = int(i + (windowSize*(1-overlap)))\n",
+    "        indexOverlapEnd = int(indexOverlapStart + windowSize)\n",
+    "        datatmp1 = data_np_array[i : i+windowSize]\n",
+    "        ffttmp1 = fft.fft(datatmp1, n=windowSize)\n",
+    "        datatmp2 = data_np_array[indexOverlapStart : indexOverlapEnd]\n",
+    "        ffttmp2 = fft.fft(datatmp2, n=windowSize)\n",
+    "        diftmp = abs(ffttmp1) - abs(ffttmp2)\n",
+    "        diftmp = ((diftmp + abs(diftmp))/2)**2\n",
+    "        sd_calc.append(np.sum(abs(diftmp[0:int(windowSize/2)])))\n",
+    "        i = i + int(windowSize*(1-overlap))\n",
+    "    return sd_calc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ODF_PLOT(x_axis, y_axis, tipo, canal=\"MONO\"):\n",
+    "    plt.figure(figsize=(15,5))\n",
+    "    plt.margins(0, 0)\n",
+    "    graphcolor = 'g'\n",
+    "    title = \"ODF - \"\n",
+    "    if tipo == \"HFC\":\n",
+    "        title = title + \"Método do conteúdo de alta frequência\"\n",
+    "        plt.ylabel('Diferença energética')\n",
+    "    elif tipo == \"SD\":\n",
+    "        title = title + \"Método da diferença espectral\"\n",
+    "        plt.ylabel('Diferença espectral')\n",
+    "        graphcolor = 'y'\n",
+    "    if canal == \"L\":\n",
+    "        title = title + \" - Canal Esquerdo\"\n",
+    "    elif canal == \"R\":\n",
+    "        title = title + \" - Canal Direito\"    \n",
+    "    plt.xlabel('Tempo [s]')\n",
+    "    plt.title(title)\n",
+    "    plt.plot(y_axis, x_axis, graphcolor)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ODF(filename, windowSize, overlap, tipo):\n",
     "    samplerate, data = wavfile.read(filename)\n",
     "    f = samplerate/2\n",
     "    qtdSamples = data.shape[0]\n",
@@ -185,14 +241,23 @@
     "    timeAxis = np.arange(0.0, maxTimeAxis, stepTimeAxis)\n",
     "    if(data.ndim == 2):\n",
     "        dataL, dataR = separa_stereo(data)\n",
-    "        hfcL = ODF_HFC_CALC(dataL, windowSize, overlap)\n",
-    "        ODF_HFC_PLOT(hfcL, timeAxis, 'L')\n",
-    "        hfcR = ODF_HFC_CALC(dataR, windowSize, overlap)\n",
-    "        ODF_HFC_PLOT(hfcR, timeAxis, 'R')\n",
+    "        if tipo == 'HFC':\n",
+    "            hfcL = ODF_HFC_CALC(dataL, windowSize, overlap)\n",
+    "            ODF_PLOT(hfcL, timeAxis, 'HFC', 'L')\n",
+    "            hfcR = ODF_HFC_CALC(dataR, windowSize, overlap)\n",
+    "            ODF_PLOT(hfcR, timeAxis, 'HFC', 'R')\n",
+    "        elif tipo == 'SD':\n",
+    "            sdL = ODF_SD_CALC(dataL, windowSize, overlap)\n",
+    "            ODF_PLOT(sdL, timeAxis, 'SD', 'L')\n",
+    "            sdR = ODF_SD_CALC(dataR, windowSize, overlap)\n",
+    "            ODF_PLOT(sdR, timeAxis, 'SD', 'R')\n",
     "    else:\n",
-    "        hfc = ODF_HFC_CALC(data, windowSize, overlap)\n",
-    "        ODF_HFC_PLOT(hfc, timeAxis) \n",
-    "    "
+    "        if tipo == 'HFC':\n",
+    "            hfc = ODF_HFC_CALC(data, windowSize, overlap)\n",
+    "            ODF_PLOT(hfc, timeAxis, 'HFC') \n",
+    "        elif tipo == 'SD':\n",
+    "            sd = ODF_SD_CALC(data, windowSize, overlap)\n",
+    "            ODF_PLOT(sd, timeAxis, 'SD')  "
    ]
   },
   {
@@ -202,7 +267,8 @@
    "outputs": [],
    "source": [
     "file = 'bat_jean_100bpm.wav'\n",
-    "ODF_HFC(file, 2048, 0.5)"
+    "ODF(file, 2048, 0.5, 'HFC')\n",
+    "ODF(file, 2048, 0.5, 'SD')"
    ]
   },
   {
@@ -212,7 +278,8 @@
    "outputs": [],
    "source": [
     "file = 'GaitaTese.wav'\n",
-    "ODF_HFC(file, 2048, 0.5)"
+    "ODF(file, 4096, 0.5, 'HFC')\n",
+    "ODF(file, 4096, 0.5, 'SD')"
    ]
   },
   {
@@ -222,22 +289,9 @@
    "outputs": [],
    "source": [
     "file = 'Only Sleeping100bpm(Violao).wav'\n",
-    "ODF_HFC(file, 2048, 0.5)"
+    "ODF(file, 16384, 0.5, 'HFC')\n",
+    "ODF(file, 16384, 0.5, 'SD')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Função de detecção de On-sets - método da diferença espectral (SD)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
