Adicionada descrição teórica do cálculo de ODF (método HFC).

--- a/AC02_Andre_Paiva.ipynb
+++ b/AC02_Andre_Paiva.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# **Atividade Computacional 02 - TEEC III**\n",
-    "## Aluno: André Paiva Conrado Rodrigues"
+    "## **Aluno: André Paiva Conrado Rodrigues**"
    ]
   },
   {
@@ -16,9 +16,11 @@
     "id": "MiGKE1UHF_GZ"
    },
    "source": [
-    "### Importando bibliotecas\n",
+    "## Importando bibliotecas\n",
     "\n",
-    "Nesta seção do código, são importadas bibliotecas de manipulação de dados importantes para a obtenção das amostras dos arquivos de áudio, bem como para a manipulação das mesmas.\n"
+    "Nesta seção do código, são importadas bibliotecas de manipulação de dados importantes para a obtenção das amostras dos arquivos de áudio, bem como para a manipulação das mesmas.\n",
+    "\n",
+    "São utilizadas as bibiliotecas `scipy` para cálculo dos dados do espectrograma e para cálculo da FFT e `matplotlib` para plotagem de gráficos e do espectrograma.\n"
    ]
   },
   {
@@ -31,10 +33,20 @@
    "source": [
     "import numpy as np\n",
     "import math\n",
-    "from scipy import signal, fft, ifft\n",
+    "from scipy import signal, fft\n",
     "from scipy.io import wavfile\n",
-    "from IPython.display import Audio\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Função para separação de arquivos stereo\n",
+    "\n",
+    "Para tornar as funções compatíveis com arquivos de áudio stereo, desenvolvi essa função para separar o np.array resultante da leitura do arquivo em dois np.arrays, um para cada canal.\n",
+    "\n",
+    "Esta função é utilizada tanto para a plotagem de espectrogramas quanto para as funções de detecção de onsets."
    ]
   },
   {
@@ -60,23 +72,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Traçando espectrogramas\n",
+    "## Espectrograma\n",
     "\n",
-    "No trecho de código abaixo, é definida a função `spectro`, que tem por função geral traçar o espectrograma referente a um determinado arquivo com uma determinada largura de janelamento, ambos parâmetros definidos pelo usuário.\n",
+    "**ESCREVER ALGO AQUI**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Traçando espectrogramas\n",
     "\n",
-    "Também é definida uma função auxiliar denominada `spectroPlot`, a qual é chamada na função `spectro`, que tem por função plotar o gráfico do espectrograma propriamente dito.\n",
+    "No trecho de código abaixo, é definida a função `spectro`, que tem por função geral:\n",
+    "* Importar o arquivo `.wav`;\n",
+    "* Ler tamanho de janela definida pelo usuário (é utilizada a janela Hann);\n",
+    "* Definir se o arquivo é mono ou stereo e separar os canais caso seja stereo;\n",
+    "* Plotar o espectrograma (caso o arquivo seja stereo, é plotado um espectrograma para cada canal).\n",
     "\n",
-    "Na função `spectro`, é distinguido se o arquivo escolhido pelo usuário é mono ou stereo. Caso o arquivo seja stereo, os dois canais de áudio são separados e duas plotagens serão efetuadas, uma para cada canal. Caso o arquivo seja mono, é feita apenas uma plotagem."
+    "Para a plotagem do espectrograma propriamente dita, foi definida a função `spectroPlot`, que utiliza diretamente comandos da biblioteca `matplotlib`. Esta função é chamada dentro da função `spectro`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def spectroPlot(audioArray, rate, windowSize, vmin, vmax, title):\n",
@@ -109,17 +128,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plotagem de espectrograma de arquivo mono"
+    "## Plotagem de espectrograma de arquivo mono"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "file = 'guitar.wav'\n",
@@ -130,28 +145,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plotagem de espectrogramas de arquivo stereo"
+    "## Plotagem de espectrogramas de arquivo stereo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "file = 'cover_altj_intro.wav'\n",
-    "spectro(file, 1024)"
+    "spectro(file, 512)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Função de detecção de On-sets (ODF)"
+    "## Função de detecção de onsets (ODF)\n",
+    "\n",
+    "> Uma função de detecção de onsets é uma função com o objetivo de representar claramente os instantes de um arquivo de áudio onde há uma grande variação de intensidade, indicando que nesses instantes há o início de algum evento específico no áudio, como por exemplo uma batida no bumbo da bateria ou um acorde tocado em um violão.\n",
+    "\n",
+    "Abaixo, é definida uma função `ODF`, capaz de utilizar tanto o método do conteúdo de alta frequência (HFC) quanto o método da diferença espectral (SD). Foram definidas três funções auxiliares que são utilizadas na função `ODF`.\n",
+    "\n",
+    "A seguir será dada uma breve explicação sobre cada uma das funções e o embasamento matemático das mesmas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cálculos pelo método da diferença espectral (HFC)\n",
+    "\n",
+    "Abaixo está a função auxiliar `ODF_HFC_CALC`, responsável pelos cálculos de ODF referentes ao método da diferença espectral.\n",
+    "\n",
+    "Neste método, estamos aplicando janelas Hann ao longo do sinal `data_np_array` com uma quantidade de amostras `windowSize` e `overlap` definido pelo usuário, e aplicando o método da diferença espectral para detecção de onsets.\n",
+    "\n",
+    "Matematicamente, utilizo a fórmula abaixo para calcular o valor da ODF para cada janela:\n",
+    "\n",
+    "$$ODF_{HFC}(i) = \\frac{2}{w}\\sum_{k=1}^{w/2}|k| \\cdot |X(i+k)|^2$$\n",
+    "\n",
+    "Sendo:\n",
+    "* $i$ o índice da amostra inicial da janela aplicada no sinal;\n",
+    "* $w$ o tamanho da janela (no código, `windowSize`);\n",
+    "* $X$ a FFT do sinal de áudio janelado (no código, `ffttmp`\n",
+    "\n",
+    "A cada valor de $ODF_{HFC}$ calculado, o índice `i` é incrementado em `windowSize * (1 - overlap)`, e o valor calculado é inserido na lista `hfc_calc`, inicialmente vazia. Após todos os valores serem calculados, tal lista é retornada no final da função.\n",
+    "\n",
+    "O numpy array `sizerange` foi criado para possibilitar a ponderação de cada amostra com seu respectivo índice, assim como indicado no somatório da fórmula matemática.\n"
    ]
   },
   {
@@ -180,7 +221,6 @@
    "outputs": [],
    "source": [
     "def ODF_SD_CALC(data_np_array, windowSize, overlap):\n",
-    "    sizerange = np.arange(1, windowSize+1)\n",
     "    sd_calc = []\n",
     "    i = 0\n",
     "    while i < data_np_array.shape[0]:\n",
