Adicionado markdown para função de plotagem de gráfico da ODF

--- a/AC02_Andre_Paiva.ipynb
+++ b/AC02_Andre_Paiva.ipynb
@@ -227,7 +227,8 @@
     "Sendo:\n",
     "* $i$ o índice da amostra inicial da janela aplicada no sinal;\n",
     "* $w$ o tamanho da janela (no código, `windowSize`);\n",
-    "* $X$ a FFT do sinal de áudio janelado (no código, `ffttmp1` para o índice $i+k$ e `ffttmp2` para o índice $i+k-w$).\n",
+    "* $X$ a FFT do sinal de áudio janelado (no código, `ffttmp1` para o índice $i+k$ e `ffttmp2` para o índice $i+k-w$);\n",
+    "* $H$ uma função de retificação de meia onda: $H[x] = \\frac{x+|x|}{2}$.\n",
     "\n",
     "A cada valor de $ODF_{SD}$ calculado, o índice `i` é incrementado em `windowSize * (1 - overlap)`, e o valor calculado é inserido na lista `sd_calc`, inicialmente vazia. Após todos os valores serem calculados, tal lista é retornada no final da função."
    ]
@@ -256,6 +257,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Função de plotagem da ODF\n",
+    "\n",
+    "Foi criada uma função dedicada para plotagem do gráfico utilizando a biblioteca `matplotlib`. Essa função é chamada pela função principal `ODF`, e serve tanto para plotagem de ODF pelo método HFC quanto pelo método SD.\n",
+    "\n",
+    "São passados 4 argumentos para a função:\n",
+    "* `x_axis`, os dados da ODF;\n",
+    "* `y_axis`, os timestamps para os dados;\n",
+    "* `tipo`, que define se a ODF recebida foi calculada pelo método HFC ou pelo método SD;\n",
+    "* `canal`, que define se os dados recebidos são referentes a um áudio `MONO`, canal `L` ou canal `R` de um áudio stereo. Essa informação influencia no título do gráfico plotado.\n",
+    "\n",
+    "Para cálculos efetuados por HFC, o gráfico é plotado em verde. Para cálculos efetuados por SD, o gráfico é plotado em vermelho."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -272,7 +290,7 @@
     "    elif tipo == \"SD\":\n",
     "        title = title + \"Método da diferença espectral\"\n",
     "        plt.ylabel('Diferença espectral')\n",
-    "        graphcolor = 'y'\n",
+    "        graphcolor = 'r'\n",
     "    if canal == \"L\":\n",
     "        title = title + \" - Canal Esquerdo\"\n",
     "    elif canal == \"R\":\n",
@@ -281,6 +299,13 @@
     "    plt.title(title)\n",
     "    plt.plot(y_axis, x_axis, graphcolor)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Função ODF generalizada"
    ]
   },
   {
